updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -23,9 +23,9 @@ MathJax.Hub.Config({
 <div class="menu-category">Algorithmic Game Theory</div>
 <div class="menu-item"><a href="home.html" class="current">Home</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
-<div class="menu-category">External links</div>
-<div class="menu-item"><a href="https://cw.sharif.edu/course/view.php?id=7586">CW</a></div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="https://cw.sharif.edu/course/view.php?id=7586">CW</a></div>
+<div class="menu-category">External links</div>
 <div class="menu-item"><a href="../cvx/home.html" class="current">22494&nbsp;Convex&nbsp;Optimization</a></div>
 <div class="menu-item"><a href="http://game-theory-class.org/">Game&nbsp;Theory</a></div>
 <div class="menu-item"><a href="https://defi-learning.org/">Decentralized&nbsp;Finance</a></div>
@@ -71,7 +71,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <ol>
 <li><p><i>Attendance and participation at sections</i>.</p>
 </li>
-<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for Saturday, January 15.</p>
+<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for Saturday January 15.</p>
 </li>
 <li><p><i>Project</i>. The project deliverables are as follows:</p>
 <ol>
@@ -103,7 +103,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-18 20:26:24 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-18 20:35:58 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
