updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -40,9 +40,68 @@ MathJax.Hub.Config({
 <img src="../bio/project.png" alt="Project" width="100px" />&nbsp;</td>
 <td align="left"><p>We will update this page with more information about the project topics soon.</p>
 </td></tr></table>
+<ul>
+<li><p>Peer Grading</p>
+<ul>
+<li><p>https:<i></i>doi.org<i>10.1016</i>j.artint.2019.03.004</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1145</i>3391403.3399488</p>
+</li>
+<li><p>https:<i></i>arxiv.org<i>abs</i>2108.05521
+</p>
+</li></ul>
+</li>
+<li><p>Selfish Mining and Block Withholding Attack</p>
+<ul>
+<li><p>https:<i></i>arxiv.org<i>abs</i>1411.7099</p>
+</li>
+<li><p>https:<i></i>arxiv.org<i>abs</i>1402.1718</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1109</i>CSF.2015.34</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.23919</i>ChiCC.2017.8027553
+</p>
+</li></ul>
+</li>
+<li><p>Information Propagation Attack</p>
+<ul>
+<li><p>https:<i></i>doi.org<i>10.1145</i>2229012.2229022</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1109</i>P2P.2013.6688704
+</p>
+</li></ul>
+</li>
+<li><p>Bitcoin Transaction Fee</p>
+<ul>
+<li><p>https:<i></i>halshs.archives-ouvertes.fr/halshs-00951358</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-48051-9_2</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1145</i>2976749.2978408</p>
+</li>
+<li><p>https:<i></i>api.semanticscholar.org/CorpusID:19451777
+</p>
+</li></ul>
+</li>
+<li><p>Denial-of-Service (DoS) Attack </p>
+<ul>
+<li><p>https:<i></i>arxiv.org<i>abs</i>1806.03108</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-44774-1_6</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-48051-9_5</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-030-01177-2_81</p>
+</li>
+<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-44774-1_</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-18 20:35:59 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 17:09:55 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
