--- a/cvx/final.html
+++ b/cvx/final.html
@@ -92,7 +92,7 @@ and <a href="solutions/final_13_sol.pdf" target=&ldquo;blank&rdquo;>solutions</a
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-18 20:36:05 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 17:10:01 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
