updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -43,57 +43,57 @@ MathJax.Hub.Config({
 <ul>
 <li><p>Peer Grading</p>
 <ul>
-<li><p>https:<i></i>doi.org<i>10.1016</i>j.artint.2019.03.004</p>
+<li><p><a href="https://doi.org/10.1016/j.artint.2019.03.004" target=&ldquo;blank&rdquo;>https://doi.org/10.1016/j.artint.2019.03.004</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1145</i>3391403.3399488</p>
+<li><p><a href="https://doi.org/10.1145/3391403.3399488" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/3391403.3399488</a></p>
 </li>
-<li><p>https:<i></i>arxiv.org<i>abs</i>2108.05521
+<li><p><a href="https://arxiv.org/abs/2108.05521" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2108.05521</a>
 </p>
 </li></ul>
 </li>
 <li><p>Selfish Mining and Block Withholding Attack</p>
 <ul>
-<li><p>https:<i></i>arxiv.org<i>abs</i>1411.7099</p>
+<li><p><a href="https://arxiv.org/abs/1411.7099" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1411.7099</a></p>
 </li>
-<li><p>https:<i></i>arxiv.org<i>abs</i>1402.1718</p>
+<li><p><a href="https://arxiv.org/abs/1402.1718" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1402.1718</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1109</i>CSF.2015.34</p>
+<li><p><a href="https://doi.org/10.1109/CSF.2015.34" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/CSF.2015.34</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.23919</i>ChiCC.2017.8027553
+<li><p><a href="https://doi.org/10.23919/ChiCC.2017.8027553" target=&ldquo;blank&rdquo;>https://doi.org/10.23919/ChiCC.2017.8027553</a>
 </p>
 </li></ul>
 </li>
 <li><p>Information Propagation Attack</p>
 <ul>
-<li><p>https:<i></i>doi.org<i>10.1145</i>2229012.2229022</p>
+<li><p><a href="https://doi.org/10.1145/2229012.2229022" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2229012.2229022</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1109</i>P2P.2013.6688704
+<li><p><a href="https://doi.org/10.1109/P2P.2013.6688704" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/P2P.2013.6688704</a>
 </p>
 </li></ul>
 </li>
 <li><p>Bitcoin Transaction Fee</p>
 <ul>
-<li><p>https:<i></i>halshs.archives-ouvertes.fr/halshs-00951358</p>
+<li><p><a href="https://halshs.archives-ouvertes.fr/halshs-00951358" target=&ldquo;blank&rdquo;>https://halshs.archives-ouvertes.fr/halshs-00951358</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-48051-9_2</p>
+<li><p><a href="https://doi.org/10.1007/978-3-662-48051-9_2" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-48051-9_2</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1145</i>2976749.2978408</p>
+<li><p><a href="https://doi.org/10.1145/2976749.2978408" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2976749.2978408</a></p>
 </li>
-<li><p>https:<i></i>api.semanticscholar.org/CorpusID:19451777
+<li><p><a href="https://api.semanticscholar.org/CorpusID:19451777" target=&ldquo;blank&rdquo;>https://api.semanticscholar.org/CorpusID:19451777</a>
 </p>
 </li></ul>
 </li>
 <li><p>Denial-of-Service (DoS) Attack </p>
 <ul>
-<li><p>https:<i></i>arxiv.org<i>abs</i>1806.03108</p>
+<li><p>[https:<i></i>arxiv.org<i>abs</i>1806.03108</p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-44774-1_6</p>
+<li><p><a href="https://doi.org/10.1007/978-3-662-44774-1_6" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-44774-1_6</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-48051-9_5</p>
+<li><p><a href="https://doi.org/10.1007/978-3-662-48051-9_5" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-48051-9_5</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-030-01177-2_81</p>
+<li><p><a href="https://doi.org/10.1007/978-3-030-01177-2_81" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-030-01177-2_81</a></p>
 </li>
-<li><p>https:<i></i>doi.org<i>10.1007</i>978-3-662-44774-1_</p>
+<li><p>[https:<i></i>doi.org<i>10.1007</i>978-3-662-44774-1_5</p>
 </li>
 </ul>
 
@@ -101,7 +101,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 17:09:55 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 17:11:53 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
