updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -43,11 +43,11 @@ MathJax.Hub.Config({
 <ul>
 <li><p>Peer Grading</p>
 <ul>
-<li><p><a href="https://doi.org/10.1016/j.artint.2019.03.004" target=&ldquo;blank&rdquo;>https://doi.org/10.1016/j.artint.2019.03.004</a></p>
+<li><p><a href="https://arxiv.org/abs/2108.05521" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2108.05521</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1145/3391403.3399488" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/3391403.3399488</a></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2108.05521" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2108.05521</a>
+<li><p><a href="https://doi.org/10.1016/j.artint.2019.03.004" target=&ldquo;blank&rdquo;>https://doi.org/10.1016/j.artint.2019.03.004</a>
 </p>
 </li></ul>
 </li>
@@ -85,7 +85,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>Denial-of-Service (DoS) Attack </p>
 <ul>
-<li><p>[https:<i></i>arxiv.org<i>abs</i>1806.03108</p>
+<li><p><a href="https://arxiv.org/abs/1806.03108" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1806.03108</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-44774-1_6" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-44774-1_6</a></p>
 </li>
@@ -93,7 +93,7 @@ MathJax.Hub.Config({
 </li>
 <li><p><a href="https://doi.org/10.1007/978-3-030-01177-2_81" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-030-01177-2_81</a></p>
 </li>
-<li><p>[https:<i></i>doi.org<i>10.1007</i>978-3-662-44774-1_5</p>
+<li><p><a href="https://doi.org/10.1007/978-3-662-44774-1_5" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-44774-1_5</a></p>
 </li>
 </ul>
 
@@ -101,7 +101,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 17:11:53 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 17:15:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
