updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -73,13 +73,13 @@ MathJax.Hub.Config({
 </li>
 <li><p>Bitcoin Transaction Fee</p>
 <ul>
-<li><p><a href="https://halshs.archives-ouvertes.fr/halshs-00951358" target=&ldquo;blank&rdquo;>https://halshs.archives-ouvertes.fr/halshs-00951358</a></p>
+<li><p><a href="https://doi.org/10.1145/2976749.2978408" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2976749.2978408</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-48051-9_2" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-48051-9_2</a></p>
 </li>
-<li><p><a href="https://doi.org/10.1145/2976749.2978408" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2976749.2978408</a></p>
+<li><p><a href="https://api.semanticscholar.org/CorpusID:19451777" target=&ldquo;blank&rdquo;>https://api.semanticscholar.org/CorpusID:19451777</a></p>
 </li>
-<li><p><a href="https://api.semanticscholar.org/CorpusID:19451777" target=&ldquo;blank&rdquo;>https://api.semanticscholar.org/CorpusID:19451777</a>
+<li><p><a href="https://halshs.archives-ouvertes.fr/halshs-00951358" target=&ldquo;blank&rdquo;>https://halshs.archives-ouvertes.fr/halshs-00951358</a>
 </p>
 </li></ul>
 </li>
@@ -91,9 +91,9 @@ MathJax.Hub.Config({
 </li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-48051-9_5" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-48051-9_5</a></p>
 </li>
-<li><p><a href="https://doi.org/10.1007/978-3-030-01177-2_81" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-030-01177-2_81</a></p>
-</li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-44774-1_5" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-44774-1_5</a></p>
+</li>
+<li><p><a href="https://doi.org/10.1007/978-3-030-01177-2_81" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-030-01177-2_81</a></p>
 </li>
 </ul>
 
@@ -101,7 +101,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 17:15:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 17:18:52 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
