updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -93,7 +93,48 @@ MathJax.Hub.Config({
 </li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-44774-1_5" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-44774-1_5</a></p>
 </li>
-<li><p><a href="https://doi.org/10.1007/978-3-030-01177-2_81" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-030-01177-2_81</a></p>
+<li><p><a href="https://doi.org/10.1007/978-3-030-01177-2_81" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-030-01177-2_81</a>
+</p>
+</li></ul>
+</li>
+<li><p>Automated Market Maker (AMM)</p>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2106.01870" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2106.01870</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2103.12732v4" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2103.12732v4</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2102.11350" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2102.11350</a>
+
+</p>
+</li></ul>
+</li>
+<li><p>Oracle</p>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2005.04377" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2005.04377</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/1808.00528" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1808.00528</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2104.15068" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2104.15068</a>
+
+
+Byzantine</p>
+</li>
+<li><p><a href="https://hal.archives-ouvertes.fr/hal-02634752v2/document" target=&ldquo;blank&rdquo;>https://hal.archives-ouvertes.fr/hal-02634752v2/document</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2001.03822" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2001.03822</a>
+
+</p>
+</li></ul>
+</li>
+<li><p>Stablecoin</p>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2006.12388" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2006.12388</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2101.08423" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2101.08423</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2103.01340" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2103.01340</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2109.08939" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2109.08939</a></p>
 </li>
 </ul>
 
@@ -101,7 +142,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 17:18:52 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 22:32:37 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
