updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -48,30 +48,16 @@ MathJax.Hub.Config({
 <li><p><a href="https://doi.org/10.1145/3391403.3399488" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/3391403.3399488</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.artint.2019.03.004" target=&ldquo;blank&rdquo;>https://doi.org/10.1016/j.artint.2019.03.004</a>
+
+Byzantine Behaviors</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2001.03822" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2001.03822</a></p>
+</li>
+<li><p><a href="https://hal.archives-ouvertes.fr/hal-02634752v2" target=&ldquo;blank&rdquo;>https://hal.archives-ouvertes.fr/hal-02634752v2</a>
 </p>
 </li></ul>
 </li>
-<li><p>Selfish Mining and Block Withholding Attack</p>
-<ul>
-<li><p><a href="https://arxiv.org/abs/1411.7099" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1411.7099</a></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1402.1718" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1402.1718</a></p>
-</li>
-<li><p><a href="https://doi.org/10.1109/CSF.2015.34" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/CSF.2015.34</a></p>
-</li>
-<li><p><a href="https://doi.org/10.23919/ChiCC.2017.8027553" target=&ldquo;blank&rdquo;>https://doi.org/10.23919/ChiCC.2017.8027553</a>
-</p>
-</li></ul>
-</li>
-<li><p>Information Propagation Attack</p>
-<ul>
-<li><p><a href="https://doi.org/10.1145/2229012.2229022" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2229012.2229022</a></p>
-</li>
-<li><p><a href="https://doi.org/10.1109/P2P.2013.6688704" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/P2P.2013.6688704</a>
-</p>
-</li></ul>
-</li>
-<li><p>Bitcoin Transaction Fee</p>
+<li><p>Bitcoin Transaction Fees</p>
 <ul>
 <li><p><a href="https://doi.org/10.1145/2976749.2978408" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2976749.2978408</a></p>
 </li>
@@ -83,7 +69,15 @@ MathJax.Hub.Config({
 </p>
 </li></ul>
 </li>
-<li><p>Denial-of-Service (DoS) Attack </p>
+<li><p>Information Propagation Attacks</p>
+<ul>
+<li><p><a href="https://doi.org/10.1145/2229012.2229022" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/2229012.2229022</a></p>
+</li>
+<li><p><a href="https://doi.org/10.1109/P2P.2013.6688704" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/P2P.2013.6688704</a>
+</p>
+</li></ul>
+</li>
+<li><p>Denial-of-Service (DoS) Attacks </p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/1806.03108" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1806.03108</a></p>
 </li>
@@ -97,36 +91,19 @@ MathJax.Hub.Config({
 </p>
 </li></ul>
 </li>
-<li><p>Automated Market Maker (AMM)</p>
+<li><p>Selfish Mining and Block Withholding Attacks</p>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2106.01870" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2106.01870</a></p>
+<li><p><a href="https://arxiv.org/abs/1411.7099" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1411.7099</a></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2103.12732v4" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2103.12732v4</a></p>
+<li><p><a href="https://arxiv.org/abs/1402.1718" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1402.1718</a></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2102.11350" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2102.11350</a>
-
+<li><p><a href="https://doi.org/10.1109/CSF.2015.34" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/CSF.2015.34</a></p>
+</li>
+<li><p><a href="https://doi.org/10.23919/ChiCC.2017.8027553" target=&ldquo;blank&rdquo;>https://doi.org/10.23919/ChiCC.2017.8027553</a>
 </p>
 </li></ul>
 </li>
-<li><p>Oracle</p>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2005.04377" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2005.04377</a></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1808.00528" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1808.00528</a></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2104.15068" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2104.15068</a>
-
-
-Byzantine</p>
-</li>
-<li><p><a href="https://hal.archives-ouvertes.fr/hal-02634752v2/document" target=&ldquo;blank&rdquo;>https://hal.archives-ouvertes.fr/hal-02634752v2/document</a></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2001.03822" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2001.03822</a>
-
-</p>
-</li></ul>
-</li>
-<li><p>Stablecoin</p>
+<li><p>Stablecoins</p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2006.12388" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2006.12388</a></p>
 </li>
@@ -134,7 +111,27 @@ Byzantine</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.01340" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2103.01340</a></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2109.08939" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2109.08939</a></p>
+<li><p><a href="https://arxiv.org/abs/2109.08939" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2109.08939</a>
+</p>
+</li></ul>
+</li>
+<li><p>Decentralized Oracles</p>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2005.04377" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2005.04377</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/1808.00528" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1808.00528</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2104.15068" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2104.15068</a>
+</p>
+</li></ul>
+</li>
+<li><p>Automated Market Makers (AMM)</p>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2106.01870" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2106.01870</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2102.11350" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2102.11350</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2103.12732v4" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2103.12732v4</a></p>
 </li>
 </ul>
 
@@ -142,7 +139,7 @@ Byzantine</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 22:32:37 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 22:40:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
