updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -48,9 +48,11 @@ MathJax.Hub.Config({
 <li><p><a href="https://doi.org/10.1145/3391403.3399488" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/3391403.3399488</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.artint.2019.03.004" target=&ldquo;blank&rdquo;>https://doi.org/10.1016/j.artint.2019.03.004</a>
-
-Byzantine Behaviors</p>
+</p>
+</li></ul>
 </li>
+<li><p>Byzantine Behaviors</p>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2001.03822" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/2001.03822</a></p>
 </li>
 <li><p><a href="https://hal.archives-ouvertes.fr/hal-02634752v2" target=&ldquo;blank&rdquo;>https://hal.archives-ouvertes.fr/hal-02634752v2</a>
@@ -139,7 +141,7 @@ Byzantine Behaviors</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 22:40:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-10 22:40:58 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
