updated the website

--- a/game/projects.html
+++ b/game/projects.html
@@ -38,7 +38,7 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="../bio/project.png" alt="Project" width="100px" />&nbsp;</td>
-<td align="left"><p>We will update this page with more information about the project topics soon.</p>
+<td align="left"><p>Each team may either choose from the following project ideas and suggested materials, or come up with their own topic and selected references.</p>
 </td></tr></table>
 <ul>
 <li><p>Peer Grading</p>
@@ -81,8 +81,6 @@ MathJax.Hub.Config({
 </li>
 <li><p>Denial-of-Service (DoS) Attacks </p>
 <ul>
-<li><p><a href="https://arxiv.org/abs/1806.03108" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1806.03108</a></p>
-</li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-44774-1_6" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-44774-1_6</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1007/978-3-662-48051-9_5" target=&ldquo;blank&rdquo;>https://doi.org/10.1007/978-3-662-48051-9_5</a></p>
@@ -98,6 +96,8 @@ MathJax.Hub.Config({
 <li><p><a href="https://arxiv.org/abs/1411.7099" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1411.7099</a></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/1402.1718" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1402.1718</a></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/1806.03108" target=&ldquo;blank&rdquo;>https://arxiv.org/abs/1806.03108</a></p>
 </li>
 <li><p><a href="https://doi.org/10.1109/CSF.2015.34" target=&ldquo;blank&rdquo;>https://doi.org/10.1109/CSF.2015.34</a></p>
 </li>
@@ -141,7 +141,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-10 22:44:13 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-10-13 13:51:32 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
