updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -47,4 +47,53 @@ MathJax.Hub.Config({
 <p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD| Exam Date/Time: TBD | Prerequisite: Some programming experience and familiarity with matrix computations.<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./cvx/home.html"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
-<td align="left">
+<td align="left"><p>Necessary and sufficient conditions for existence of solution and unboundedness of linear programs, geometric and algebraic interpretations of primal simplex, revised simplex, degeneracy and its effects, analytic study of the big-M and two phase methods, cycling, lexicographical and Bland's methods to avoid cycling, simples algorithm with bounded variables, Karush-Kuhn-Tucker (KKT) conditions, theorems of the alternatives including Farkas&rsquo; lemma and Gordon's theorem, duality (weak and strong duality theorems, and complementary slackness conditions), dual and primal-dual algorithms, sensitivity analysis, integer programming (branch and bound and cutting plane algorithms), transportation and optimal assignment problems, solution of maxial flow problem (max-flow-min-cut theorem) and its use for solving the assignment problem, convex sets anfd functions and the corresponding analytical conditions for recognition, necessary conditions and second order sufficient conditions for minimizers of unconstrained and constrained nonlinear programming problems (the Fritz-John and the KKT conditions), and the interior-point approach for solving linear programs.</p>
+</td></tr></table>
+<p>This course was formerly known as <a href="./cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a>, and was taught 2019-20. Some of the material from that class is expanded and used here. 
+</p>
+<h2>Selected past courses</h2>
+<h3><a href="./game/home.html" target=&ldquo;blank&rdquo;><b>22058</b> Algorithmic Game Theory</a></h3>
+<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: 15 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 1/15/22 3:00pm | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
+<table class="imgtable"><tr><td>
+<a href="./game/home.html"><img src="./game/Incentivus.png" alt="Project Incentivus" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values. </p>
+</td></tr></table>
+<p>This is the alpha version of a course on the ongoing research and open problems in algorithmic game theory. Many advanced topics and cutting-edge issues in the field are discussed, which require mathematical maturity at the level of Ph.D. courses. There is no official textbook for the course.
+
+</p>
+<h3><a href="./ala/home.html" target=&ldquo;blank&rdquo;><b>22659</b> Applied Linear Algebra</a></h3>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
+<table class="imgtable"><tr><td>
+<a href="./ala/home.html"><img src="./ala/ALA.jpg" alt="Introduction to applied linear algebra" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include but are not limited to time-series prediction, tomography, optimal control, and portfolio optimization.</p>
+</td></tr></table>
+<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
+</p>
+<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255" target=&ldquo;blank&rdquo;><b>22255</b> Linear Algebra I</a></h3>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
+<table class="imgtable"><tr><td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="https://linear.axler.net/LADRcover.png" alt="Linear algebra done right" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
+</td></tr></table>
+<p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the Math curriculum.
+</p>
+<h3><a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a></h3>
+<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
+<table class="imgtable"><tr><td>
+<a href="./bio/home.html"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
+</td></tr></table>
+<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
+</p>
+<h3><a href="./cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a></h3>
+<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
+<table class="imgtable"><tr><td>
+<a href="./cvx/home.html"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
+</td></tr></table>
+<p>The course materials are the same as <a href="https://web.stanford.edu/class/ee364a/">EE364a</a> (Stanford) and <a href="http://www.seas.ucla.edu/~vandenbe/ee236b/ee236b.html">EE236b</a> (UCLA). Specifically, the textbook and lecture slides can be found <a href="http://stanford.edu/~boyd/cvxbook/">here</a>.</p>
+</td>
+</tr>
+</table>
+</body>
+</html>
