--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@ MathJax.Hub.Config({
 <h2>Current classes</h2>
 <p></p>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22815" target=&ldquo;blank&rdquo;><b>22815</b> Advanced Programming</a></h3>
-<p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: 100 | Lectures: TBA | Exam Date/Time: TBA | Prerequisite: Foundations of Computer and Programming<br /></p>
+<p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: 100 | Lectures: Sun, Tue 5:00&ndash;7:00pm | Exam Date/Time: TBA | Prerequisite: Foundations of Computer and Programming<br /></p>
 <table class="imgtable"><tr><td>
 <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22815"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Computational thinking and programming code, data representation and data types, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, variables and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation and object-oriented programming, inheritance and polymorphism, overloading and overriding, testing and debugging, exceptions and assertions.</p>
@@ -44,7 +44,7 @@ MathJax.Hub.Config({
 <p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum.
 </p>
 <h3><a href="./cvx/home.html" target=&ldquo;blank&rdquo;>Optimization</a></h3>
-<p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD| Exam Date/Time: TBD | Prerequisite: Some programming experience and familiarity with matrix computations.<br /></p>
+<p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 5:00&ndash;7:00pm | Exam Date/Time: TBD | Prerequisite: Some programming experience and familiarity with matrix computations.<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./cvx/home.html"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Necessary and sufficient conditions for existence of solution and unboundedness of linear programs, geometric and algebraic interpretations of primal simplex, revised simplex, degeneracy and its effects, analytic study of the big-M and two phase methods, cycling, lexicographical and Bland's methods to avoid cycling, simplex algorithm with bounded variables, Karush-Kuhn-Tucker (KKT) conditions, theorems of the alternatives including Farkas&rsquo; lemma and Gordon's theorem, duality (weak and strong duality theorems, and complementary slackness conditions), dual and primal-dual algorithms, sensitivity analysis, integer programming (branch and bound and cutting plane algorithms), transportation and optimal assignment problems, solution of maximal flow problem (max-flow-min-cut theorem) and its use for solving the assignment problem, convex sets and functions and the corresponding analytical conditions for recognition, necessary conditions and second order sufficient conditions for minimizers of unconstrained and constrained nonlinear programming problems (the Fritz-John and the KKT conditions), and the interior-point approach for solving linear programs.</p>
