updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="software.html">Software</a></div>
-<div class="menu-item"><a href="calendar.html">Calendar</a></div>
+<div class="menu-item"><a href="people.html">People</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -43,6 +43,7 @@ MathJax.Hub.Config({
 </td></tr></table>
 <p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum.
 </p>
+<h2>Selected past courses</h2>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22803/14002/main" target=&ldquo;blank&rdquo;><b>22803</b> Optimization in Data Science</a></h3>
 <p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 5:00&ndash;7:00pm | Exam Date/Time: 6/25/22 9:00am | Prerequisite: Some programming experience and familiarity with matrix computations.<br /></p>
 <table class="imgtable"><tr><td>
@@ -51,7 +52,6 @@ MathJax.Hub.Config({
 </td></tr></table>
 <p>This course was formerly known as <a href="./cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a>, and was taught 2019-20. Some of the material from that class is expanded and used here. 
 </p>
-<h2>Selected past courses</h2>
 <h3><a href="./game/home.html" target=&ldquo;blank&rdquo;><b>22058</b> Algorithmic Game Theory</a></h3>
 <p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: 15 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 1/15/22 3:00pm | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
 <table class="imgtable"><tr><td>
@@ -59,7 +59,6 @@ MathJax.Hub.Config({
 <td align="left"><p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values. </p>
 </td></tr></table>
 <p>This is the alpha version of a course on the ongoing research and open problems in algorithmic game theory. Many advanced topics and cutting-edge issues in the field are discussed, which require mathematical maturity at the level of Ph.D. courses. There is no official textbook for the course.
-
 </p>
 <h3><a href="./ala/home.html" target=&ldquo;blank&rdquo;><b>22659</b> Applied Linear Algebra</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
