--- a/software.html
+++ b/software.html
@@ -25,7 +25,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="software.html" class="current">Software</a></div>
-<div class="menu-item"><a href="calendar.html">Calendar</a></div>
+<div class="menu-item"><a href="people.html">People</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
