updated the website

--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@ MathJax.Hub.Config({
 </ul>
 <h2>Former graduate students</h2>
 <ul>
-<li><p>Ali Fath</p>
+<li><p>Ali Fathi</p>
 </li>
 </ul>
 </td>
